--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,7 @@ nav{
 	width: 100%;
 	height: 60px;
 	background: #344051;
+	position: fixed;
 }
 .logo{
 	color: #fff;
@@ -12,6 +13,9 @@ nav{
 	line-height: 60px;
 	margin-left: 388px;
 	float: left;
+	-webkit-animation: comming 2s ease;
+	-o-animation: comming 2s ease;
+	animation: comming 2s ease;
 }
 .menu{
 	float: left;
@@ -24,17 +28,97 @@ nav{
 	margin-right: 40px;
 	font-size: 16px;
 	text-transform: uppercase;
+	-webkit-animation: topshift 0.4s ease forwards;
+	-o-animation: topshift 0.4s ease forwards;
+	animation: topshift 0.4s ease forwards;
+	opacity: 0;
+}
+.menu li a{
+	transition: all 0.1s;
+	color: white;
+	transform: scale(1);
+	display: inline-block;
+}
+.menu li a:visited{
+	color:white;
+}
+.menu li a:hover{
+	color: #d17700;
+}
+.menu li a:active{
+	transform: scale(1.1);
+}
+.title__container input{
+	transition: all 0.2s;
+	transform: scale(1);
+}
+.title__container input:hover{
+	background: #344051;
+	color:white;
+}
+.title__container input:active{
+	transform: scale(1.1);
+}
+@keyframes comming{
+	from{
+		opacity: 0;
+	}
+	to{
+		opacity: 1;
+	}
+}
+@keyframes topshift{
+	from{
+		opacity: 0;
+		margin-top: -80px;
+	}
+	to{
+		opacity: 1;
+		margin-top: 0px;
+	}
+}
+@keyframes titlemove{
+	from{
+		opacity: 0;
+		margin-left: -500px;
+	}
+	to{
+		opacity: 1;
+		margin-left: 404px;
+	}
+}
+.menu li:nth-child(2){
+	animation-delay: 0.4s;
+}
+.menu li:nth-child(3){
+	animation-delay: 0.8s;
+}
+.menu li:nth-child(4){
+	animation-delay: 1.2s;
+}
+.menu li:nth-child(5){
+	animation-delay: 1.6s;
+}
+.menu li:nth-child(6){
+	animation-delay: 2.0s;
 }
 .main{
 	width: 100%;
-	height: calc(100% - 60px);
-	background: url(../img/парень.png) 90% 100%/auto 85% no-repeat, url(../img/фон.jpg) center/cover no-repeat;
+	height: 100%;
+	background: url(../img/Парень.png) 90% 100%/auto 85% no-repeat, url(../img/фон.jpg) center/cover no-repeat;
 }
 .title__container{
 	float: left;
 	margin: 432px 0px 0px 404px;
 	color: #2c384a;
 	text-align: center;
+	opacity: 0;
+	-webkit-animation: titlemove 1s ease forwards;
+	-o-animation: titlemove 1s ease forwards;
+	animation: titlemove 1s ease forwards;
+	-webkit-animation-delay: 2.4s;
+	-o-animation-delay: 2.4s;
+	animation-delay: 2.4s;
 }
 	.title__container h1{
 		font-size: 60px;
@@ -63,23 +147,49 @@ nav{
 
 
 }
-	.about h2{
+@keyframes abouttext{
+	from{
+		opacity: 0;
+	}
+	to{
+		opacity: 1;
+	}
+}
+	.about_container h2{
+		
 		margin-top: 40px;
 		font-size: 25px;
 		margin-bottom: 40px;
 		text-align: center;
 		text-transform: uppercase;
+
 	}
-	.about h4{
+	.about_container h4{
+		opacity: 0;
 		color: #3f495a;
 		font-size: 16px;
 		text-align: left;
 		margin-top: 40px;
 		margin-left: 595px;
 		margin-right: 595px;
+		-webkit-animation: abouttext 0.5s ease forwards;
+		-o-animation: abouttext 0.5s ease forwards;
+		animation: abouttext 0.5s ease forwards;
+		animation-delay: 1s;
 		
 	}
-	.about input{
+	.about_container input{
+	transition: all 0.2s;
+	transform: scale(1);
+}
+.about_container input:hover{
+	background: forestgreen;
+	color:white;
+}
+.about_container input:active{
+	transform: scale(1.1);
+}
+	.about_container input{
 		height: 30px;
 		text-align: right;
 		color: #3f495a;
@@ -91,7 +201,7 @@ nav{
 		background: url(../img/download_button.png) 5% 50%/auto 70% no-repeat;
 	}
 
-	.about-img img{
+	.animate__animated img{
 		border-radius: 50% 50%;
 		margin-top: 60px;
 
@@ -116,6 +226,7 @@ nav{
 	}
 	.skills-box{
 		margin-left: 415px;
+
 	}
 	.skills-box li{
 		float: left;
@@ -124,7 +235,31 @@ nav{
 		margin-top: 40px;
 		margin-right: 80px;
 		margin-bottom: 93px;
+		-webkit- animation: boxinvade 0.5s ease forwards;
+		-o- animation: boxinvade 0.5s ease forwards;
+		animation: boxinvade 0.5s ease forwards;
+		opacity: 0;
+
 	}
+	@keyframes boxinvade{
+		from{
+			opacity: 0;
+			margin-left: -500px;
+		}
+		to{
+			opacity: 1;
+			margin-left: 0px;
+		}
+	}
+	.skills-box li:nth-child(2){
+	animation-delay: 0.4s;
+}
+.skills-box li:nth-child(3){
+	animation-delay: 0.8s;
+}
+.skills-box li:nth-child(4){
+	animation-delay: 1.2s;
+}
 	.skills-box p{
 		font-weight: bold;
 		margin: 20px 0px 20px;
@@ -241,14 +376,14 @@ nav{
 		font-weight: bold;
 }
 .statistics{
-	border: 1px solid #fff;
+	border: 1px solid transparent;
 			width: 100%;
 			height: 60%;
 			text-align: center;
 			color: #1c2534;
 			font-size: 25px;
 			text-transform: uppercase;
-			background: url(../img/statistics.jpg) center/cover no-repeat;
+			/*background: url(../img/statistics.jpg) center/cover no-repeat;*/
 }
 	.statistics-container{
 		/*border: 2px solid #6d7682;*/
@@ -274,10 +409,48 @@ nav{
 			line-height: 50px;
 			margin: 0px 40px; 
 	}
+							.parallax {
+						  perspective: 1px;
+						  height: 100vh;
+						  overflow-x: hidden;
+						  overflow-y: auto;
+						}
+
+						.parallax__layer {
+							/*border: 1px solid green;*/
+							position: absolute;
+							top: 0;
+							right: 0;
+							bottom: 0;
+							left: 0;
+						}
+						.parallax__group {
+							/*border: 1px solid black;*/
+						  position: relative;
+						  height: 60vh;
+						  transform-style: preserve-3d;
+
+						}
+
+						.parallax__layer--base {
+							transform: translateZ(0);
+
+						}
+
+						.parallax__layer--back {
+
+							transform: translateZ(-1px);
+ 							background: url(../img/statistics.jpg) center/cover no-repeat;
+ 							width: 200%;
+ 							height:200%;
+ 							left:-935px;
+ 							top: -350px;
+						}
 .reviews{
+	border: 1px solid transparent;
 		height: 592px;
 		width: 100%;
-		border: 1px solid #fff;
+		
 }
 	.reviews-container{
 						/*border: 1px solid #aaa;*/
@@ -303,19 +476,20 @@ nav{
   				display: block;
 }
 .contacts{
-		color: #fff;
+	border: 1px solid transparent;
 		height:810px;
 		width: 100%;
-		border: 1px solid #fff;
-		background: url(../img/contacts.jpg) center/cover no-repeat;
+		background: url(../img/Contacts.jpg) center/cover no-repeat;
 }
 	.contacts-container{
-		border: 1px solid #aaa;
+		/*border: 1px solid #aaa;*/
 						width: 735px;
-						margin: 105px 0px 0px 595px;
+						margin: 105px auto 0px auto;
 						text-align: center;
+						color: #fff;
 	}
 	.contacts-container h2{
+
 						font-weight: bold;
 						font-size: 40px;
 						margin-bottom: 20px;
@@ -327,29 +501,60 @@ nav{
 						margin-top: 40px;
 						font-size: 16px;
 	}
-	.contacts-container2 li{
-							float: left;
+	.contacts-container ul li{
+		/*border: 1px solid #aaa;*/
+							display: inline-block;
+							margin: 10px auto;
+							padding: 0px 80px;
+							/*float:left;*/
 							font-size: 16px;
 							line-height: 25px;
-							margin: 20px 10px;
 							font-weight:bold; 
-	}
-	.contacts-container3 h1{
-						margin: 20px 0px;	
+	}						
+	.contacts-container h1{
+		/*border: 1px solid #aaa;*/
+						margin: 10px 0px;	
 						font-weight: bold;	
 						font-size: 20px;
-						text-align: left;
 	}
-	.contacts-container3 input{
-						float:left;
+	.contacts-container input{
+		/*border: 1px solid #aaa;*/
 						height: 38px;
-						width:45%;
-						margin: 20px 5%;
+						width: 350px;
 						text-align: left;
 						color: #737373;
 						background: #eeeeee; 
 						font-size: 16px;
-						padding: 0px 20px;
+						padding: 0px 10px;
+	}
+	.contacts-container3 ul li{
+		/*border: 1px solid #aaa;*/
+						display: inline-block;
+						float: left;
+						margin: 10px 1px;
+						padding: 0px 7px;
 	}
 	.contacts-container3 textarea{
+		/*border: 1px solid #aaa;*/
+		margin: 10px 1px;
+	}
+	.contacts-container2 input{
+	height: 40px;
+		text-align: center;
+		color: #6d7682;
+		border: 2px solid #6d7682;
+		border-radius: 5px;
+		font-size: 13px;
+		padding: 0px 16px;
+	transition: all 0.2s;
+	transform: scale(1);
+}
+.contacts-container2 input:hover{
+	background: forestgreen;
+	color:white;
+}
+.contacts-container2 input:active{
+	transform: scale(1.1);
+	background: red;
+}
 	}
